--- a/ITCheckOut/package.json
+++ b/ITCheckOut/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^15.1.2",
     "@testing-library/react-native": "^12.8.1",
     "axios-mock-adapter": "^2.1.0",
     "jest": "^29.7.0"
